fix sidebar overflow

--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -366,7 +366,6 @@ a{
   #sidebar-wrapper {
     min-height: 100vh;
     margin-left: -5.3rem;
-    overflow-y: auto; /* Enable scrolling if needed */
     transition: margin 0.25s ease-out;
 }
 
